# GreenAmpt-Nash-Muskingum

./: .gitignore  AGENTS.md  LICENSE  README.md  calibrate.py  forecast.py  generate_example_data.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
core/: WOA_optimize_GreenAmpt-Nash-Muskingum.py  __init__.py  calibration_workflow.py  model.py
dataset/: example_data.csv  example_forecast.csv
docs/: USER_GUIDE.md
skills/greenampt-nash-muskingum/: SKILL.md
skills/greenampt-nash-muskingum/agents/: openai.yaml
skills/greenampt-nash-muskingum/references/: io-schema.md  model-card.md
skills/greenampt-nash-muskingum/scripts/: smoke_check.py
tests/: test_calibration_workflow.py  test_example_data_generation.py  test_forecast.py
